# patchbay

./: .env.signing.example  .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
patchbay-clap-probe/: Cargo.toml
patchbay-clap-probe/src/: main.rs
patchbay-core/: Cargo.toml
patchbay-core/examples/: scan_all.rs  scan_vst3.rs
patchbay-core/src/: lib.rs  live_project.rs
patchbay-core/src/audio/: mod.rs
patchbay-core/src/daw_readers/: ableton.rs  dawproject.rs  logicpro.rs  mod.rs  reaper.rs
patchbay-core/src/daw_writers/: ableton.rs  dawproject.rs  logicpro.rs  reaper.rs
patchbay-core/src/db/: migrations.rs  mod.rs
patchbay-core/src/indexer/: mod.rs
patchbay-core/src/scanner/: au.rs  clap.rs  mod.rs  vst2.rs
patchbay-core/src/watcher/: mod.rs
patchbay-juce/: README.md
patchbay-vst2-probe/: Cargo.toml
patchbay-vst2-probe/src/: main.rs
spike/headless-host/: .gitignore  CMakeLists.txt  main.cpp  test_runner.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
ui/src/components/: CenterPanel.tsx  PluginFilters.tsx  PluginList.tsx  RightPanel.tsx  SearchResults.tsx
ui/src/views/: Chains.tsx  Dashboard.tsx  PluginDetail.tsx
