[package]
name = "patchbay-core"
version.workspace = true
edition.workspace = true
description = "Scanner, indexer, and audio analysis for Patchbay"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
plist = "1"

[dev-dependencies]
tempfile = "3"
